--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <a href="./index.html">
-        <img src="./images/logo.svg" alt="Logo" width: 40px; height: 36px;>
+        <img src="./images/logo.svg" alt="Logo" width="40" height="36" />
         Product
       </a>
       <nav>
@@ -32,12 +32,221 @@
           Tools, tutorials, design and innovation experts, all in one place! The
           most intuitive way to imagine your next user experience.
         </p>
-        <lu>
+        <ul>
           <li><button type="button">Get started</button></li>
           <li><button type="button">Watch the Video</button></li>
-        </lu>
-        <img src="./images/hero-img.svg" alt="hero-img" width: 610px; height:
-        555px;>
+        </ul>
+        <img
+          src="./images/hero-img.svg"
+          alt="hero-img"
+          width="610"
+          height="555"
+        />
+      </section>
+      <!-- PRODUCT SECTION -->
+      <section>
+        <h2>Product was Built Specifically for You</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/icon-1.svg"
+              alt="Icon 1"
+              width="54"
+              height="54"
+            />
+            <h3>First click tests</h3>
+            <p>While most people enjoy casino gambling</p>
+          </li>
+          <li>
+            <img
+              src="./images/icon-2.svg"
+              alt="Icon 2"
+              width="54"
+              height="54"
+            />
+            <h3>Design surveys</h3>
+            <p>Sports betting, lottery and bingo playing for the fun</p>
+          </li>
+          <li>
+            <img
+              src="./images/icon-3.svg"
+              alt="Icon 3"
+              width="54"
+              height="54"
+            />
+            <h3>Preference tests</h3>
+            <p>The Myspace page defines the individual.</p>
+          </li>
+          <li>
+            <img
+              src="./images/icon-4.svg"
+              alt="Icon 3"
+              width="54"
+              height="54"
+            />
+            <h3>Five second tests</h3>
+            <p>Personal choices and the overall personality of the person.</p>
+          </li>
+        </ul>
+        <button type="button">sign up now</button>
+      </section>
+      <!-- SERVICES SECTION -->
+      <section>
+        <h2>Services</h2>
+        <p>Effortless Validation for</p>
+        <h3>Management</h3>
+        <ul>
+          <li>
+            <p>
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices and the overall
+              personality of the person.
+            </p>
+          </li>
+          <li>
+            <h4>Accessory makers</h4>
+            <p>
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+          </li>
+          <li>
+            <h4>Alterationists</h4>
+            <p>
+              If you are looking for a new way to promote your business that
+              won’t cost you more money,
+            </p>
+          </li>
+        </ul>
+        <img
+          src="./images/management-img.svg"
+          alt="Management"
+          width="540"
+          height="500"
+        />
+        <img
+          src="./images/support-img.svg"
+          alt="Support"
+          width="540"
+          height="500"
+        />
+
+        <h3>Easier decision making for</h3>
+        <h2>Customer Support</h2>
+        <ul>
+          <li>
+            <p>
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices and the overall
+              personality of the person.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/icon-5.svg"
+              alt="Icon 5"
+              width="35"
+              height="35"
+            />
+            <p>Never worry about overpaying for your energy again.</p>
+          </li>
+          <li>
+            <img
+              src="./images/icon-6.svg"
+              alt="Icon 6"
+              width="35"
+              height="35"
+            />
+            <p>
+              We will only switch you to energy companies that we trust and will
+              treat you right
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/icon-7.svg"
+              alt="Icon 7"
+              width="35"
+              height="35"
+            />
+            <p>We track the markets daily and know where the savings are.</p>
+          </li>
+        </ul>
+        <p>Optimisation for</p>
+        <h3>Collaborative</h3>
+        <ul>
+          <li>
+            <p>
+              Few would argue that, despite the advancements of feminism over
+              the past three decades, women still face a double standard when it
+              comes to their behavior.
+            </p>
+          </li>
+        </ul>
+        <h4>Accessory makers</h4>
+        <ul>
+          <li>
+            <p>
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+          </li>
+        </ul>
+        <h4>Alterationists</h4>
+        <ul>
+          <li>
+            <p>
+              If you are looking for a new way to promote your business that
+              won’t cost you more money,
+            </p>
+          </li>
+        </ul>
+        <img
+          src="./images/collaboration-img.svg"
+          alt="Collaboration"
+          width="540"
+          height="500"
+        />
+      </section>
+      <!-- PRICE SECTION -->
+      <section>
+        <h2>Price Table</h2>
+        <p>We offer competitive price</p>
+        <ul>
+          <li>
+            <h3>Free</h3>
+            <p>Brief price description</p>
+            <h4>$0 Per / mont</h4>
+            <ul>
+              <li>2 Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Standard</h3>
+            <p>Brief price description</p>
+            <h4>$5 Per / month</h4>
+            <ul>
+              <li>3+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Premium</h3>
+            <p>Brief price descriptionn</p>
+            <h4>$10 Per / month</h4>
+            <ul>
+              <li>10+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
