--- a/index.html
+++ b/index.html
@@ -209,6 +209,93 @@
           height="500"
         />
       </section>
+      <!-- EASY PROCESSING -->
+      <section>
+        <h2>Quick & Easy Process</h2>
+        <p>
+          Do you require some help for your project: Conception workshop,
+          prototyping, marketing strategy, landing page, Ux/UI?
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/avatar-1.jpg"
+              alt="Avatar-1"
+              width="98"
+              height="98"
+            />
+            <p>I can take care of your pitch</p>
+          </li>
+          <li>
+            <p>I can prototype your app</p>
+            <img
+              src="./images/avatar-2.jpg"
+              alt="Avatar-2"
+              width="98"
+              height="98"
+            />
+          </li>
+          <li>
+            <p>I can take care of your pitch</p>
+            <img
+              src="./images/avatar-3.jpg"
+              alt="Avatar-3"
+              width="98"
+              height="98"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/avatar-4.jpg"
+              alt="Avatar-4"
+              width="98"
+              height="98"
+            />
+            <p>I can help marketing strategy</p>
+          </li>
+        </ul>
+        <button type="button">Contact our expert</button>
+      </section>
+      <!-- CONTENT  -->
+      <section>
+        <h2>Contents Strategies</h2>
+        <p>
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/laptop.jpg"
+              alt="Laptop"
+              width="350"
+              height="185"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Increasing Prosperity With Positive Thinking</h3>
+          </li>
+          <li>
+            <img
+              src="./images/motivation.jpg"
+              alt="Motivation"
+              width="350"
+              height="185"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Motivation Is The First Step To Success</h3>
+          </li>
+          <li>
+            <img
+              src="./images/success.jpg"
+              alt="Success"
+              width="350"
+              height="185"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Success Steps For Your Personal Or Business</h3>
+          </li>
+        </ul>
+      </section>
       <!-- PRICE SECTION -->
       <section>
         <h2>Price Table</h2>
@@ -249,6 +336,123 @@
           </li>
         </ul>
       </section>
+      <!-- FEEDBACK SECTION -->
+      <section>
+        <h2>What Clients Say</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+        <ul>
+          <li>
+            <img src="./images/Stars.svg" alt="Stars" width="106" height="18" />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img
+              src="./images/Ellipse.jpg"
+              alt="Avatar-5"
+              width="50"
+              height="50"
+            />
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+          <li>
+            <img src="./images/Stars.svg" alt="Stars" width="106" height="18" />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img
+              src="./images/Ellipse-2.jpg"
+              alt="Avatar-6"
+              width="50"
+              height="50"
+            />
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+          <li>
+            <img src="./images/Stars.svg" alt="Stars" width="106" height="18" />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img
+              src="./images/Ellipse-3.jpg"
+              alt="Avatar-7"
+              width="50"
+              height="50"
+            />
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- JOIN SECTION -->
+      <section>
+        <h2>Join 100 Compannies who boost their business with Product</h2>
+        <button type="button">Get This</button>
+        <img src="./images/screen.jpg" alt="Screen" width="351" height="331" />
+      </section>
     </main>
+
+    <!-- FOOTER SECTION -->
+    <footer>
+      <a href="./index.html">
+        <img src="./images/logo.svg" alt="Logo" width="40" height="36" />
+        Product
+      </a>
+      <ul>
+        <li>
+          <img
+            src="./images/Instagram.svg"
+            alt="Instagram"
+            width="40"
+            height="40"
+          />
+          <a href=""></a>
+        </li>
+        <li>
+          <img
+            src="./images/facebook.svg"
+            alt="Facebook"
+            width="40"
+            height="40"
+          />
+          <a href=""></a>
+        </li>
+        <li>
+          <img
+            src="./images/twitter.svg"
+            alt="Twitter"
+            width="40"
+            height="40"
+          />
+          <a href=""></a>
+        </li>
+      </ul>
+      <h3>Resource</h3>
+      <ul>
+        <li>About Us</li>
+        <li>Blog</li>
+        <li>Contact</li>
+        <li>FAQ</li>
+      </ul>
+      <h3>Legal Stuf</h3>
+      <ul>
+        <li>Disclaimer</li>
+        <li>Financing</li>
+        <li>Privacy Policy</li>
+      </ul>
+      <h3>knowing you're always on the best energy deal.</h3>
+      <ul>
+        <li><button type="button">tel</button></li>
+        <li><button type="button">Sign up Now</button></li>
+      </ul>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+    </footer>
   </body>
 </html>
