--- a/index.html
+++ b/index.html
@@ -4,37 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Business promotion</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <a href="./index.html">
+      <a href="./index.html" class="logo-link">
         <img src="./images/logo.svg" alt="Logo" width="40" height="36" />
-        Product
+        <span class="product">Product </span>
       </a>
       <nav>
-        <ul>
-          <li><a href="./index.html">Product</a></li>
-          <li><a href="./pricing.html">Pricing</a></li>
-          <li><a href="./customer.html">Customers</a></li>
-          <li><a href="">Resources</a></li>
+        <ul class="nav-menu">
+          <li><a href="./index.html" class="nav-link">Product</a></li>
+          <li><a href="./pricing.html" class="nav-link">Pricing</a></li>
+          <li><a href="./customer.html" class="nav-link">Customers</a></li>
+          <li><a href="" class="nav-link">Resources</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
+      <ul class="auth-buttons">
+        <li>
+          <button type="button" class="hero-button-sign-in">Sign In</button>
+        </li>
+        <li>
+          <button type="button" class="hero-button-sign-up">Sign Up</button>
+        </li>
       </ul>
     </header>
     <main>
       <!-- HERO SECTION -->
-      <section>
-        <h1>Work at the speed of thought</h1>
-        <p>
+      <section id="hero-section" class="hero-section">
+        <h1 class="hero-title">Work at the speed of thought</h1>
+        <p class="hero-description">
           Tools, tutorials, design and innovation experts, all in one place! The
           most intuitive way to imagine your next user experience.
         </p>
-        <ul>
-          <li><button type="button">Get started</button></li>
-          <li><button type="button">Watch the Video</button></li>
+        <ul class="hero-buttons">
+          <li>
+            <button type="button" class="button-get-started">
+              Get started
+            </button>
+          </li>
+          <li>
+            <button type="button" class="button-watch-the-video">
+              Watch the Video
+            </button>
+          </li>
         </ul>
         <img
           src="./images/hero-img.svg"
@@ -44,8 +63,8 @@
         />
       </section>
       <!-- PRODUCT SECTION -->
-      <section>
-        <h2>Product was Built Specifically for You</h2>
+      <section id="product-section" class="product-section">
+        <h2 class="product-title">Product was Built Specifically for You</h2>
         <ul>
           <li>
             <img
@@ -54,8 +73,10 @@
               width="54"
               height="54"
             />
-            <h3>First click tests</h3>
-            <p>While most people enjoy casino gambling</p>
+            <h3 class="product-test">First click tests</h3>
+            <p class="product-description">
+              While most people enjoy casino gambling
+            </p>
           </li>
           <li>
             <img
@@ -64,8 +85,10 @@
               width="54"
               height="54"
             />
-            <h3>Design surveys</h3>
-            <p>Sports betting, lottery and bingo playing for the fun</p>
+            <h3 class="product-test">Design surveys</h3>
+            <p class="product-description">
+              Sports betting, lottery and bingo playing for the fun
+            </p>
           </li>
           <li>
             <img
@@ -74,8 +97,10 @@
               width="54"
               height="54"
             />
-            <h3>Preference tests</h3>
-            <p>The Myspace page defines the individual.</p>
+            <h3 class="product-test">Preference tests</h3>
+            <p class="product-description">
+              The Myspace page defines the individual.
+            </p>
           </li>
           <li>
             <img
@@ -84,35 +109,37 @@
               width="54"
               height="54"
             />
-            <h3>Five second tests</h3>
-            <p>Personal choices and the overall personality of the person.</p>
+            <h3 class="product-test">Five second tests</h3>
+            <p class="product-description">
+              Personal choices and the overall personality of the person.
+            </p>
           </li>
         </ul>
-        <button type="button">sign up now</button>
+        <button type="button" class="product-button">sign up now</button>
       </section>
       <!-- SERVICES SECTION -->
-      <section>
+      <section id="services-section" class="services-section">
         <h2>Services</h2>
-        <p>Effortless Validation for</p>
-        <h3>Management</h3>
+        <p class="service-name">Effortless Validation for</p>
+        <h3 class="service-heading">Management</h3>
         <ul>
           <li>
-            <p>
+            <p class="service-description">
               The Myspace page defines the individual, his or her
               characteristics, traits, personal choices and the overall
               personality of the person.
             </p>
           </li>
           <li>
-            <h4>Accessory makers</h4>
-            <p>
+            <h4 class="service-title">Accessory makers</h4>
+            <p class="service-description">
               While most people enjoy casino gambling, sports betting, lottery
               and bingo playing for the fun
             </p>
           </li>
           <li>
-            <h4>Alterationists</h4>
-            <p>
+            <h4 class="service-title">Alterationists</h4>
+            <p class="service-description">
               If you are looking for a new way to promote your business that
               won’t cost you more money,
             </p>
@@ -132,11 +159,11 @@
           height="500"
         />
 
-        <h3>Easier decision making for</h3>
-        <h2>Customer Support</h2>
+        <p class="service-name">Easier decision making for</p>
+        <h3 class="service-heading">Customer Support</h3>
         <ul>
           <li>
-            <p>
+            <p class="service-description">
               The Myspace page defines the individual, his or her
               characteristics, traits, personal choices and the overall
               personality of the person.
@@ -149,7 +176,9 @@
               width="35"
               height="35"
             />
-            <p>Never worry about overpaying for your energy again.</p>
+            <p class="service-description">
+              Never worry about overpaying for your energy again.
+            </p>
           </li>
           <li>
             <img
@@ -158,7 +187,7 @@
               width="35"
               height="35"
             />
-            <p>
+            <p class="service-description">
               We will only switch you to energy companies that we trust and will
               treat you right
             </p>
@@ -170,33 +199,35 @@
               width="35"
               height="35"
             />
-            <p>We track the markets daily and know where the savings are.</p>
+            <p class="service-description">
+              We track the markets daily and know where the savings are.
+            </p>
           </li>
         </ul>
-        <p>Optimisation for</p>
-        <h3>Collaborative</h3>
+        <p class="service-name">Optimisation for</p>
+        <h3 class="service-heading">Collaborative</h3>
         <ul>
           <li>
-            <p>
+            <p class="service-description">
               Few would argue that, despite the advancements of feminism over
               the past three decades, women still face a double standard when it
               comes to their behavior.
             </p>
           </li>
         </ul>
-        <h4>Accessory makers</h4>
+        <h4 class="service-title">Accessory makers</h4>
         <ul>
           <li>
-            <p>
+            <p class="service-description">
               While most people enjoy casino gambling, sports betting, lottery
               and bingo playing for the fun
             </p>
           </li>
         </ul>
-        <h4>Alterationists</h4>
+        <h4 class="service-title">Alterationists</h4>
         <ul>
           <li>
-            <p>
+            <p class="service-description">
               If you are looking for a new way to promote your business that
               won’t cost you more money,
             </p>
@@ -448,8 +479,14 @@
         <li>Privacy Policy</li>
       </ul>
       <h3>knowing you're always on the best energy deal.</h3>
+      <img
+        src="./images/mobile-screen.svg"
+        alt="Phone"
+        width="18"
+        height="28"
+      />
       <ul>
-        <li><button type="button">tel</button></li>
+        <li><button type="button">Enter your phone number</button></li>
         <li><button type="button">Sign up Now</button></li>
       </ul>
       <p>Made With Love By Figmaland All Right Reserved</p>
